[package]
name = "pallet-members"
version = "4.0.0-dev"
description = "Controller pallet for managing a set of members."
authors = ["CTT DEV <https://>"]
homepage = "https://substrate.io"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.4", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.9.0", default-features = false, features = [
	"derive",
] }
frame-benchmarking = { version = "4.0.0-dev", default-features = false, optional = true, git = "https://github.com/CTT-block-chain/polkadot-sdk.git", branch = "master" }
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/CTT-block-chain/polkadot-sdk.git", branch = "master" }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/CTT-block-chain/polkadot-sdk.git", branch = "master" }
sp-std = { version = "8.0.0", git = "https://github.com/CTT-block-chain/polkadot-sdk.git", branch = "master", default-features = false }
sp-core = { version = "21.0.0", git = "https://github.com/CTT-block-chain/polkadot-sdk.git", branch = "master", default-features = false }
sp-io = { version = "23.0.0", git = "https://github.com/CTT-block-chain/polkadot-sdk.git", branch = "master", default-features = false }
sp-runtime = { version = "24.0.0", git = "https://github.com/CTT-block-chain/polkadot-sdk.git", branch = "master", default-features = false }
pallet-balances = { version = "4.0.0-dev", default-features = false, optional = true, git = "https://github.com/CTT-block-chain/polkadot-sdk.git", branch = "master" }

[dev-dependencies]


[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"pallet-balances/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
]
